--- a/modules/projects/client/views/project-partials/modal-project-schedule.html
+++ b/modules/projects/client/views/project-partials/modal-project-schedule.html
@@ -2,6 +2,16 @@
 	<h3 class="modal-title">Project Schedule</h3>
 </div>
 
+<div class="modal-body">
+
+	<div class="form-inline well well-sm text-right">
+		<div class="form-group">
+	  		<label for="newCurPhase">Set Current Project Phase&nbsp;</label>
+			<select id="newCurPhase" class="form-control" ng-model="projSched.newPhase" ng-options="phase as phase.name for phase in projSched.phases"></select>
+		</div>
+	</div>
+
+</div>
 
 <table class='table table-condensed'>	
 	<thead>
@@ -34,16 +44,6 @@
 	</tbody>
 </table>
 
-<div class="modal-body">
-
-	<div class="form-inline well well-sm text-right">
-		<div class="form-group">
-	  		<label for="newCurPhase">Set Current Project Phase&nbsp;</label>
-			<select id="newCurPhase" class="form-control" ng-model="projSched.project.currentPhase" ng-options="phase as phase.name for phase in projSched.phases"></select>
-		</div>
-	</div>
-
-</div>
 
 <div class="modal-footer">
 	<button class="btn btn-default" type="button" ng-click="projSched.cancel()">Cancel</button>
