--- a/modules/projects/client/views/projects-partials/projects-schedule.html
+++ b/modules/projects/client/views/projects-partials/projects-schedule.html
@@ -18,13 +18,15 @@
 
 			<tr ng-repeat="project in projectList.projects" class='clickable' ui-sref="project({id: project._id})">
 				<td ng-if="project.status === 'In Progress'">{{ project.name }}</td>
-				<td>{{ project.phase.name }}</td>				
+				<td ng-if="project.status === 'In Progress'">{{ project.phase.name }}</td>
 				<td ng-if="project.status === 'In Progress'" colspan="5" class="bg-warning"><!-- show schedule widget --></td>
 
 				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.name }}</td>
+				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.phase.name }}</td>
 				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'" colspan="5">Project received certificate.</td>
 
 				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" >{{ project.name }}</td>
+				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'">{{ project.phase.name }}</td>
 				<td ng-if="project.status === 'Initiated' || project.status === 'Submitted'" colspan="5">{{ project.status }}</td>
 			</tr>
 
