Set projectVC model, UI update

--- a/modules/projects/client/views/project-partials/modal-project-vc-entry.html
+++ b/modules/projects/client/views/project-partials/modal-project-vc-entry.html
@@ -40,7 +40,7 @@
                 </td>
             </tr>
             <tr>
-                <td style="padding-top: 5px; border: 1px solid red;">
+                <td style="padding-top: 5px;">
                     <table class="table table-condensed table-hover">
                         <thead>
                             <tr class="small" colspan="3">
