another search field

--- a/modules/projects/client/views/projects-partials/projects-search.html
+++ b/modules/projects/client/views/projects-partials/projects-search.html
@@ -3,29 +3,35 @@
 	<div class="panel-body">
 		<h3>Find a Project</h3>		
 		<div class="row">
-			<div class="col-sm-3">
+			<div class="col-sm-4">
 				<div class="form-group">
 					<label class="control-label">Keywords</label>
 					<input class="input-sm form-control" type="text" ng-model="projectsSearch.search.keywords"/>
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<div class="form-group">
 					<label for="type" class="control-label">Project Type</label>
 					<select id="type" ng-model="projectsSearch.search.type" class="form-control input-sm" ng-options="type as type for type in projectsSearch.types"></select>
 
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				<div class="form-group">
-					<label for="region" class="control-label">Region</label>
-					<select if="region" ng-model="projectsSearch.search.region" class="form-control input-sm" ng-options="key as value for (key, value) in projectsSearch.regions"></select>
+					<label for="phase" class="control-label">Phase</label>
+					<select id="phase" ng-model="projectsSearch.search.phase" class="form-control input-sm" ng-options="phase.name as phase.name for phase in projectsSearch.phases"></select>
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-2">
+				<div class="form-group">
+					<label for="region" class="control-label">Region</label>
+					<select id="region" ng-model="projectsSearch.search.region" class="form-control input-sm" ng-options="key as value for (key, value) in projectsSearch.regions"></select>
+				</div>
+			</div>
+			<div class="col-sm-2">
 				<div class="form-group">
 					<label for="status" class="control-label">Status</label>
-					<select if="status" ng-model="projectsSearch.search.status" class="form-control input-sm" ng-options="key as value for (key, value) in projectsSearch.status"></select>
+					<select id="status" ng-model="projectsSearch.search.status" class="form-control input-sm" ng-options="key as value for (key, value) in projectsSearch.status"></select>
 				</div>
 			</div>
 		</div>
