Project Description Edit

--- a/modules/projects/client/views/project-partials/modal-project-entry.html
+++ b/modules/projects/client/views/project-partials/modal-project-entry.html
@@ -34,7 +34,7 @@
 			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="shortDesc" class="control-label">Short Description</label>
-					<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projectEntry.project.description" rows=6></textarea>
+					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="projectEntry.project.description" rows=6></textarea>
 				</div>
 			</div>
 		</div>
