--- a/modules/documents/client/views/partials/modal-document-link.html
+++ b/modules/documents/client/views/partials/modal-document-link.html
@@ -2,7 +2,7 @@
 	<h3 class="modal-title">Link Documents</h3>
 </div>
 <div class="modal-body">
-	<tmpl-documents-link x-project="docLinkModal.project" x-type="project"></tmpl-documents-link>
+	<tmpl-documents-link x-current="docLinkModal.current" x-project="docLinkModal.project" x-type="project"></tmpl-documents-link>
 </div>
 <div class="modal-footer">
 	<button class="btn btn-default" type="button" ng-click="docLinkModal.cancel()">Cancel</button>
