--- a/modules/projectdescriptions/client/views/project-description-edit.html
+++ b/modules/projectdescriptions/client/views/project-description-edit.html
@@ -6,48 +6,65 @@
 		</h1>
 
 		<section class="panel panel-default">
+			<div class="panel-body">
+				<h4>General</h4>
 
-			edit controls
+				<h5>Background</h5>
+
+				<div class="text-block"
+					ng-show="!edit.background"
+					ng-bind-html="projDescEdit.data.general.background || 'Click to add'"
+					ng-click="edit.background = true">
+				</div>
+
+				<div class="text-block form-group"
+					ng-show="edit.background">
+					<div class="form-group">
+						<textarea ng-show="edit.background"
+							ui-tinymce
+							id="general"
+							type="text"
+							class="form-control input-sm"
+							ng-model="projDescEdit.data.general.background" rows=6></textarea>
+					</div>
+					<div class="text-right"
+						<a class="btn btn-default" href ng-click="edit.background = false">Close</a>
+					</div>
+				</div>
+
+				<h5>Location</h5>
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.general.location" rows=6></textarea>
 
 
-			<h4>General</h4>
+				<h5>Location Documents</h5>
 
-			<h5>Background</h5>
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.general.background" rows=6></textarea>
+				<p>List here</p>
 
+				<h4>Overview</h4>
+				<h5>Components</h5>
+				
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.overview.components" rows=6></textarea>
 
-			<h5>Location</h5>
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.general.location" rows=6></textarea>
+				<h5>Scheduled Phases</h5>
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.overview.schedulePhases" rows=6></textarea>
 
+				<h5>Costs</h5>
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.overview.costs" rows=6></textarea>
 
-			<h5>Location Documents</h5>
+				<h5>Site Plan Documents</h5>
+				<p>List here</p>
 
-			<p>List here</p>
+				<h4>Land User Setting</h4>
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.landUserSetting" rows=6></textarea>
 
-			<h4>Overview</h4>
-			<h5>Components</h5>
-			
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.overview.components" rows=6></textarea>
+				<h4>Consulting Activities</h4>
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.consultingActivities" rows=6></textarea>
 
-			<h5>Scheduled Phases</h5>
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.overview.schedulePhases" rows=6></textarea>
+				<h4>Proposed Development Schedule</h4>
+				<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.proposedDevelopmentSchedule" rows=6></textarea>
 
-			<h5>Costs</h5>
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.overview.costs" rows=6></textarea>
-
-			<h5>Site Plan Documents</h5>
-			<p>List here</p>
-
-			<h4>Land User Setting</h4>
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.landUserSetting" rows=6></textarea>
-
-			<h4>Consulting Activities</h4>
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.consultingActivities" rows=6></textarea>
-
-			<h4>Proposed Development Schedule</h4>
-			<textarea ui-tinymce id="shortDesc" type="text" class="form-control input-sm" ng-model="projDescEdit.data.proposedDevelopmentSchedule" rows=6></textarea>
-
-<a class="btn btn-default" href ng-click="projDescEdit.save()">Save</a>
+				<a class="btn btn-default" href ng-click="projDescEdit.save()">Save</a>
+			</div>
 		</section>
 
 	</div> <!-- /col9 -->
