--- a/modules/projects/client/views/project-partials/project-activities.html
+++ b/modules/projects/client/views/project-partials/project-activities.html
@@ -8,8 +8,11 @@
 
 				<label class="control-label">Phases</label>
 				<ul class="list-unstyled task-list">
-					<li ng-repeat="phase in projectActs.phases">
+					<li ng-repeat="phase in projectActs.phases | orderBy:'order'">
 						<button class="btn btn-block btn-sm btn-default" ng-class="{'btn-primary': projectActs.selectedPhase._id === phase._id}" ng-click="projectActs.selectPhase(phase)">{{ phase.name }}</button>
+					</li>
+					<li ng-if="!projectActs.phases || projectActs.phases.length === 0">
+						No Phases defined.
 					</li>
 				</ul>
 
@@ -17,7 +20,7 @@
 			<div class="col-sm-4">
 				<label class="control-label">Milestones</label>
 				<ul class="list-unstyled task-list">
-					<li ng-repeat="milestone in projectActs.milestones">
+					<li ng-repeat="milestone in projectActs.milestones | orderBy:'order'">
 						<button class="btn btn-block btn-sm btn-default" ng-class="{'btn-primary': projectActs.selectedMilestone._id === milestone._id}" ng-click="projectActs.selectMilestone(milestone)">{{ milestone.name }}</button>
 					</li>
 					<li ng-if="!projectActs.milestones || projectActs.milestones.length === 0">
@@ -35,7 +38,7 @@
 
 				<label class="control-label">Activities</label>
 				<ul class="list-unstyled task-list">
-					<li ng-repeat="activity in projectActs.activities">
+					<li ng-repeat="activity in projectActs.activities | orderBy:'order'">
 						<button class="btn btn-block btn-sm btn-default" ui-sref="activity({project: projectActs.project._id, activity: activity._id})">{{ activity.name }}</button>
 					</li>
 					<li ng-if="!projectActs.activities || projectActs.activities.length === 0">
