--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -35,36 +35,49 @@
 			</div>
 			<div class='col-sm-4 col-no-padding vertical-scroll' ng-class="{'bg-muted': !filterSummary}" >
 
-				<ul class="small list-unstyled list-documents list-indent-left" ng-show="filterSummary">
-					<li>
-						<h3>
-							<a
-								class="small btn-download"
-								href="/api/document/{{ filterSummary._id }}/fetch"
-								target="_blank">Download <span class="glyphicon glyphicon-download"></span>
-							</a>
-							{{ filterSummary.internalOriginalName | removeExtension }}</h3>
-						<p>System File Title: {{ filterSummary.internalName }}</p>
-						<p>Date Posted: {{ filterSummary.projectFolderDatePosted | date : format : timezone }}</p>
-						<p>File Format: {{ filterSummary.internalMime }}</p>
-						<p>File Size: {{ filterSummary.MBytes }} MB</p>
-						<p>In Review?: {{ filterSummary.documentIsInReview?'Yes':'No' }}</p>
-						<!-- NB: Project folders are authors in EPIC:  We override this behavior here -->
-						<p>Author: {{ filterSummary.documentAuthor }}</p>
-						<p>Current Revision: <a href="/api/document/{{ filterSummary._id }}/fetch"
-												target="_blank">{{ filterSummary.documentVersion }} <span class="glyphicon glyphicon-download"></span></a></p>
-						<p>Latest Revision: {{ filterSummary.documentIsLatestVersion?'Yes':'No' }} </p>
-					</li>
-					<!-- <li>
-						Tags
-					</li> -->
-					<li>
-						Revisions:
-					</li>
-					<li ng-repeat="docVersion in docBrowser.docVersions">
-						<a href="{{ docVersion.documentFileURL }}">{{ docVersion.dateUpdated | date : format : timezone}}: {{ docVersion.documentVersion }} <span class="glyphicon glyphicon-download"></span></a>
-					</li>
-				</ul>
+				<div class="row" ng-show="filterSummary">
+					<div class="col-sm-10 doc-detail-col">
+						<ul class="small list-unstyled list-documents list-indent-left" >
+							<li>
+								<h3>
+									{{ filterSummary.internalOriginalName | removeExtension }}
+								</h3>
+								<p>System File Title: {{ filterSummary.internalName }}</p>
+								<p>Date Posted: {{ filterSummary.projectFolderDatePosted | date : format : timezone }}</p>
+								<p>File Format: {{ filterSummary.internalMime }}</p>
+								<p>File Size: {{ filterSummary.MBytes }} MB</p>
+								<p>In Review?: {{ filterSummary.documentIsInReview?'Yes':'No' }}</p>
+								<!-- NB: Project folders are authors in EPIC:  We override this behavior here -->
+								<p>Author: {{ filterSummary.documentAuthor }}</p>
+								<p>Current Revision: <a href="/api/document/{{ filterSummary._id }}/fetch"
+														target="_blank">{{ filterSummary.documentVersion }} <span class="glyphicon glyphicon-download"></span></a></p>
+								<p>Latest Revision: {{ filterSummary.documentIsLatestVersion?'Yes':'No' }} </p>
+							</li>
+							<li>
+								Revisions:
+							</li>
+							<li ng-repeat="docVersion in docBrowser.docVersions">
+								<a href="{{ docVersion.documentFileURL }}">{{ docVersion.dateUpdated | date : format : timezone}}: {{ docVersion.documentVersion }} <span class="glyphicon glyphicon-download"></span></a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-sm-2 doc-action-col">
+						<a
+							href="/api/document/{{ filterSummary._id }}/fetch"
+							target="_blank" title="Download">
+								<span class="glyphicon glyphicon-download"></span>
+						</a>
+
+						<a
+							href
+							ng-click="docBrowser.toggleDocumentLink( filterSummary._id )"
+							title="Link">
+								<span class="glyphicon glyphicon-link"></span>
+						</a>
+
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
