--- a/modules/projects/client/views/projects-partials/projects-schedule.html
+++ b/modules/projects/client/views/projects-partials/projects-schedule.html
@@ -19,7 +19,9 @@
 			<tr ng-repeat="project in projectList.projects" class='clickable' ui-sref="project({id: project._id})">
 				<td ng-if="project.status === 'In Progress'">{{ project.name }}</td>
 				<td ng-if="project.status === 'In Progress'">{{ project.phase.name }}</td>
-				<td ng-if="project.status === 'In Progress'" colspan="5" class="bg-warning"><!-- show schedule widget --></td>
+				<td ng-if="project.status === 'In Progress'" colspan="5" class="bg-warning">
+				<!-- show schedule widget -->
+				</td>
 
 				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.name }}</td>
 				<td ng-if="project.status === 'Certified' || project.status === 'Decomissioned'">{{ project.phase.name }}</td>
