--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -69,8 +69,9 @@
 						</a>
 
 						<a
+							ng-if="docBrowser.allowLink"
 							href
-							ng-click="docBrowser.toggleDocumentLink( filterSummary._id )"
+							ng-click="docBrowser.toggleDocumentLink( filterSummary )"
 							title="Link">
 								<span class="glyphicon glyphicon-link"></span>
 						</a>
