--- a/modules/documents/client/views/partials/document-link.html
+++ b/modules/documents/client/views/partials/document-link.html
@@ -1,7 +1,8 @@
 <tmpl-documents-browser
-	x-project="docLink.project">
+	x-project="docLink.project"
+	x-allow-links='true'>
 </tmpl-documents-browser>
-
+{{ $scope.current | json }}
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-12">
@@ -9,10 +10,22 @@
 			<div class="well well-sm">
 				<table class="table table-condensed table-no-head no-lower-margin">
 					<tbody>
-						<tr ng-repeat="doc in docLink.linkFiles track by $index">
-				        		<td>
-				          		{{doc.internalOriginalName}}
-				        		</td>
+						<tr ng-repeat="file in docLink.linkFiles track by $index">
+
+							<td class="document-cell">
+								<span class='glyphicon glyphicon-file'></span> {{ file.internalOriginalName }}</a><br/>
+								<small>{{ file.projectFolderType }} / {{ file.projectFolderSubType }} / {{ file.projectFolderName }}</small>
+							</td>
+							<td>
+								<small ng-if="file.v">v.{{ file.documentVersion }}</small>
+							</td>
+							<td class='text-right no-wrap'>{{ file.dateUpdated | amDateFormat:'MMM Do'}}</td>
+							<td class="text-right">
+								<p class="form-control-static">
+									<a href ng-click="docLink.changeItem(file)"><span class="glyphicon glyphicon-remove"></span></a>
+								</p>
+							</td>
+
 				    		</tr>
 					</tbody>
 				</table>
