--- a/modules/roles/client/views/partials/modal-users-by-roles.html
+++ b/modules/roles/client/views/partials/modal-users-by-roles.html
@@ -2,7 +2,6 @@
 	<h3 class="modal-title">Users By Roles</h3>
 </div>
 <div class="modal-body">
-
 	<div class="row">
 		<div class="col-sm-6 col-md-4" ng-repeat="role in usersByRoles.roles | orderBy">
 			<div class="thumbnail">
@@ -20,5 +19,5 @@
 
 </div>
 <div class="modal-footer">
-	<button class="btn btn-default" type="button" ng-click="usersByRoles.ok()">Close</button>
+	<button class="btn btn-default" type="button" ng-click="usersByRoles.cancel()">Close</button>
 </div>
