--- a/modules/organizations/client/views/edit-organization.client.view.html
+++ b/modules/organizations/client/views/edit-organization.client.view.html
@@ -10,7 +10,7 @@
             </div>
 
             <div class="panel-body">
-                <tmpl-organizations-display-edit x-organization-id="{{editOrganization.organizationId}}" x-mode="edit"></tmpl-organizations-display-edit>
+                <tmpl-organizations-display-edit x-organization-id="{{editOrganization.organizationId}}"></tmpl-organizations-display-edit>
             </div>
 
         </div>
