--- a/modules/organizations/client/views/new-organization.client.view.html
+++ b/modules/organizations/client/views/new-organization.client.view.html
@@ -10,7 +10,7 @@
             </div>
 
             <div class="panel-body">
-                <tmpl-organizations-display-edit x-organization-id="{{addOrganization.organizationId}}" mode="add"></tmpl-organizations-display-edit>
+                <tmpl-organizations-display-edit x-organization-id="new"></tmpl-organizations-display-edit>
             </div>
 
         </div>
