--- a/modules/documents/client/views/partials/document-upload-general.html
+++ b/modules/documents/client/views/partials/document-upload-general.html
@@ -2,10 +2,16 @@
 <div class="well well-sm clearfix">
 	<div class="row">
 		<div class="col-md-12">
-		    <div ngf-drop ngf-select ng-model="files" class="drop-box"
-		        ngf-drag-over-class="dragover" ngf-multiple="true" ngf-allow-dir="true"
-		        accept="image/*,application/pdf" 
-		        ngf-pattern="'image/*,application/pdf'">Drop files here or click to select
+		    <div ngf-drop
+		    		ngf-select
+		    		ng-model="files"
+		    		class="drop-box"
+		        	ngf-drag-over-class="dragover"
+		        	ngf-multiple="true"
+		        	ngf-allow-dir="true"
+		     	ngf-max-total-size="5MB"
+		     	accept="application/pdf" 
+		     	ngf-pattern="'application/pdf'">Drop files here or click to select<br/><small>5MB maximum, PDF format only</small>
 		    </div>
 		</div>
 	</div>
